@@ -1,3 +1,7 @@
+=== HEAD
+
+* Add Sequel.version for getting the internal version of Sequel (pusewicz, jeremyevans)
+
 === 2.9.0 (2009-01-12)
 
 * Add -L option to sequel command line tool to load all .rb files in the given directory (pkondzior, jeremyevans)
